# crosscoder_learning

./: .gitignore  README.md  play.ipynb  pyproject.toml
dictionary_learning/: buffer.py  cache.py  dictionary.py  evaluation.py  interp.py  utils.py
src/dictionary_learning/: dictionary.py
tests/: benchmark_decoder.py
