[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["dictionary_learning*"]
exclude = ["junk*"]

[project]
dynamic = ["version"]
name = "dictionary_learning"
description = "A package for dictionary learning via sparse autoencoders on neural network activations"
readme = "README.md"
keywords = ["dictionary learning", "sparse autoencoder", "neural networks"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "nnsight>=0.4,<0.6",
    "einops",
    "pytest",
    "datasets",
    "zstandard",
]
